// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTicker with flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX bPovrF"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker with flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX bPovrF"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX bPovrF"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX bPovrF"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with isApp property 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX ittaCn"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with isApp property 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX ittaCn"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;
